<resources>
    <string name="app_name">My CBT</string>
    <string name="question_1">1. Which of these is not an android view?</string>
    <string name="question_2">2. How many views can be put in a scrollview?</string>
    <string name="question_3">3. Which of these allows you to share the spaces in a parent view equally among the children?</string>
    <string name="question_4">4. Which of these layouts allows you to overlap layouts?</string>
    <string name="question_5">5. Which of these is not an attribute of TextView?</string>
</resources>
