<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ogan.mycbt.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name"
            android:id="@+id/your_name"
            android:layout_marginBottom="10dp"
            android:inputType="textCapWords"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/question_text"
            android:text="@string/question_1"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/answer_text"
                android:text="TextView"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/answer_text"
                android:text="ImageView"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/question1"
                style="@style/answer_text"
                android:text="LineView"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/question_text"
            android:text="@string/question_2"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/question2"
                style="@style/answer_text"
                android:text="1"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/answer_text"
                android:text="3"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/answer_text"
                android:text="6"/>

        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/question_text"
            android:text="@string/question_3"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/answer_text"
                android:text="layout_width"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/question3"
                style="@style/answer_text"
                android:text="layout_weight"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/answer_text"
                android:text="view_alignLeft"/>

        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/question_text"
            android:text="@string/question_4"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/answer_text"
                android:text="GridView"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/question4"
                style="@style/answer_text"
                android:text="FrameLayout"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/answer_text"
                android:text="LinearLayout"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/question_text"
            android:text="@string/question_5" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="android:scaleType"
                style="@style/answer_text"
                android:id="@+id/question5"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/answer_text"
                android:text="android:drawableTop"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/answer_text"
                android:text="android:id"/>
        </RadioGroup>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Submit"
            android:textColor="@android:color/white"
            android:background="@drawable/mybutton"
            android:onClick="submit"
            android:layout_marginTop="10dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/mybutton"
            android:layout_gravity="center"
            android:onClick="emailScore"
            android:padding="5dp"
            android:textColor="@android:color/white"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="Email Score"/>
    </LinearLayout>

</ScrollView>
